--- a/package.json
+++ b/package.json
@@ -5,33 +5,27 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "axios": "^0.25.0",
-    "bootstrap-table": "^1.19.1",
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.20.0",
     "bootstrap-vue": "^2.21.2",
-    "build": "^0.1.4",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.14",
-    "vue-bootstrap4-table": "^1.1.11",
-    "vuejs-datatable": "^2.0.0-alpha.7"
+    "expect": "^27.4.6",
+    "jest": "^27.4.7",
+    "vue": "^2.5.16",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/test-utils": "^1.3.0",
-    "babel-eslint": "^10.1.0",
-    "bootstrap": "^4.6.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "jquery": "^3.6.0",
-    "mocha": "^8.4.0",
-    "mochapack": "^2.1.2",
-    "popper.js": "^1.16.1",
-    "vue-jest": "^3.0.7",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.0-beta.15",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.15",
+    "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/test-utils": "^1.0.0-beta.16",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.0.1",
+    "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
     "root": true,
